# ==================
# Build system setup
# ==================

[build-system]
requires = [
    "setuptools>=42",  # At least v42 of setuptools required!
    "versioningit",
]
build-backend = "setuptools.build_meta"


[tool.versioningit]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.0"


# =========================
# Linter and code formatter
# =========================

[tool.isort]
profile = "black"
extend_skip_glob = [
  # Always.
  ".*",
  "__pycache__",
  # Temporary.
  "examples",
  "contrib",
  "mqttwarn/examples",
  "mqttwarn/services",
  "mqttwarn/vendor",
]

[tool.black]
line-length = 120
extend-exclude = """
  # Always.
  ^/tests/etc/functions_bad.py |
  # Temporary.
  ^/examples |
  ^/contrib |
  ^/mqttwarn/examples |
  ^/mqttwarn/services |
  ^/mqttwarn/vendor
"""

[tool.ruff]
line-length = 120
ignore = [
  "E722"  # Do not use bare `except`
]
extend-exclude = [
  # Always.
  ".venv*",
  "tests/etc/functions_bad.py",
  # Temporary.
  "examples",
  "contrib",
  "mqttwarn/examples",
  "mqttwarn/services",
  "mqttwarn/vendor",
]

[tool.mypy]
ignore_missing_imports = true
files = [
  "mqttwarn/core.py",
  "mqttwarn/services/ntfy.py",
  "tests/services/test_ntfy.py",
]


# ==================
# Test configuration
# ==================

[tool.pytest.ini_options]
minversion = "2.0"
addopts = "-rsfEX -p pytester --strict-markers --verbosity=3 --cov --cov-report=term-missing --cov-report=xml --cov-report html:.pytest_results/htmlcov"
log_level = "DEBUG"
log_cli_level = "DEBUG"
testpaths = ["examples", "mqttwarn", "tests"]
xfail_strict = true
markers = [
  "e2e",  # Full end-to-end system tests, needing an MQTT broker.
]

[tool.coverage.run]
branch = false
source = ["mqttwarn"]

[tool.coverage.report]
fail_under = 0
show_missing = true
omit = [
    "mqttwarn/vendor/*",
]



# ===================
# Tasks configuration
# ===================

[tool.poe.tasks]
format = [
  {cmd="black ."},
  {cmd="isort ."},
]
lint = [
  {cmd="ruff ."},
  {cmd="black --check ."},
  {cmd="isort --check ."},
  {cmd="mypy --install-types --non-interactive"},
]
test = [
  {cmd="pytest"},
]
build = {cmd="python -m build"}
check = ["lint", "test"]
